Put AAC mime types in code comments in index.html.

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ var resources = [
   { src: 'media/car_cenc-20120827-87.mp4', type: 'video/mp4; codecs="avc1.4d401e"'},
   { src: 'media/car_cenc-20120827-88.mp4', type: 'video/mp4; codecs="avc1.4d401f"'},
   { src: 'media/car_cenc-20120827-89.mp4', type: 'video/mp4; codecs="avc1.640028"'},
-  { src: 'media/car_cenc-20120827-8b.mp4', type: 'audio/mp4' /* ; codecs="mp4a.40.03" */},
-  { src: 'media/car_cenc-20120827-8c.mp4', type: 'audio/mp4' /* ; codecs="mp4a.40.02" */},
-  { src: 'media/car_cenc-20120827-8d.mp4', type: 'audio/mp4' /* ; codecs="mp4a.40.02" */},
+  { src: 'media/car_cenc-20120827-8b.mp4', type: 'audio/mp4' /* ; codecs="mp4a.40.05" */}, // HE-AAC
+  { src: 'media/car_cenc-20120827-8c.mp4', type: 'audio/mp4' /* ; codecs="mp4a.40.02" */}, // AAC-LC
+  { src: 'media/car_cenc-20120827-8d.mp4', type: 'audio/mp4' /* ; codecs="mp4a.40.02" */}, // AAC-LC
 ];
 
 var preload_cdm_checkbox = document.getElementById("preload_cdm_checkbox");
