Updated to handle new navigator.requestMediaKeySystemAccess API.

--- a/index.html
+++ b/index.html
@@ -76,22 +76,44 @@ function log(msg) {
 
 
 function createMediaKeys(media, mime) {
-  var supported = MediaKeys.isTypeSupported("org.w3.clearkey", mime);
-  log('MediaKeys.isTypeSupported("org.w3.clearkey", ' + mime + ')= ' + supported);
-  if (!supported) {
-    // Abort the load...
-    media.src = '';
-    return false;
+  if (MediaKeys.isTypeSupported) {
+    var supported = MediaKeys.isTypeSupported("org.w3.clearkey", mime);
+    log('MediaKeys.isTypeSupported("org.w3.clearkey", ' + mime + ')= ' + supported);
+    if (!supported) {
+      // Abort the load...
+      media.src = '';
+      return false;
+    }
   }
   if (!media.mediaKeys) {
-    var promise = MediaKeys.create("org.w3.clearkey");
-    promise.catch(function(ex) { log("ERROR: Unable to create MediaKeys ex=" + ex); });
-    promise.then(
-      function(createdMediaKeys) {
-        log("MediaKeys created, createdMediaKeys=" + createdMediaKeys);
-        return media.setMediaKeys(createdMediaKeys);
-      }
-    ).catch(function(ex) { log("ERROR: Unable to set MediaKeys ex=" + ex); });
+    if (navigator.requestMediaKeySystemAccess) {
+      var options = [
+        {
+          initDataType: "cenc",
+          videoType: "video/mp4",
+        }
+      ];
+
+      navigator.requestMediaKeySystemAccess("org.w3.clearkey", options)
+      .then(function(keySystemAccess) {
+        return keySystemAccess.createMediaKeys();
+      }, bail(name + " Failed to request key system access."))
+
+      .then(function(mediaKeys) {
+        log(name + " created MediaKeys object ok");
+        return media.setMediaKeys(mediaKeys);
+      }, bail(name + " failed to create MediaKeys object"))
+
+    } else {
+      var promise = MediaKeys.create("org.w3.clearkey");
+      promise.catch(function(ex) { log("ERROR: Unable to create MediaKeys ex=" + ex); });
+      promise.then(
+        function(createdMediaKeys) {
+          log("MediaKeys created, createdMediaKeys=" + createdMediaKeys);
+          return media.setMediaKeys(createdMediaKeys);
+        }
+      ).catch(function(ex) { log("ERROR: Unable to set MediaKeys ex=" + ex); });
+    }
   }
   return true;
 }
@@ -237,14 +259,15 @@ function load(index) {
   media.addEventListener("encrypted", function(event) {
     log("EVENT encrypted initDataType=" + event.initDataType + " initData= " + ArrayBufferToStr(event.initData));
     
-    var supported = MediaKeys.isTypeSupported("org.w3.clearkey", event.initDataType, mime);
-    log('MediaKeys.isTypeSupported("org.w3.clearkey", ' + event.initDataType + ', ' + mime + ')= ' + supported);
-    if (!supported) {
-      // Abort the load...
-      media.src = '';
-      return;
+    if (MediaKeys.isTypeSupported) {
+      var supported = MediaKeys.isTypeSupported("org.w3.clearkey", event.initDataType, mime);
+      log('MediaKeys.isTypeSupported("org.w3.clearkey", ' + event.initDataType + ', ' + mime + ')= ' + supported);
+      if (!supported) {
+        // Abort the load...
+        media.src = '';
+        return;
+      }
     }
-
     if (!media.mediaKeys) {
       var onMediaKeysSet = function() {
         log("MediaKeys set");
@@ -256,7 +279,24 @@ function load(index) {
         media.setMediaKeys(mediaKeys).then(onMediaKeysSet, bail("setMediaKeys() failed."));
       };
     
-      MediaKeys.create("org.w3.clearkey").then(onMediaKeysCreated, bail("MediaKeys.create() failed."));
+      if (MediaKeys.create) {
+        MediaKeys.create("org.w3.clearkey").then(onMediaKeysCreated, bail("MediaKeys.create() failed."));
+      } else if (navigator.requestMediaKeySystemAccess) {
+          var options = [
+            {
+              initDataType: "cenc",
+              videoType: "video/mp4",
+            }
+          ];
+
+          navigator.requestMediaKeySystemAccess("org.w3.clearkey", options)
+          .then(function(keySystemAccess) {
+            return keySystemAccess.createMediaKeys();
+          }, bail(name + " Failed to request key system access."))
+
+          .then(onMediaKeysCreated, bail(name + " failed to create MediaKeys object"))
+
+      }
 
     } else {
       createSession(event.initDataType, event.initData);
